--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "IBM VGA 8x14 Web 437";
+  src: url("assets/Web437_IBM_VGA_8x14.woff") format("woff");
+}
+
 body {
   --main-bg-color: black;
   --main-text-color: #a7a7a7;
@@ -7,7 +12,8 @@ body {
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
   margin: 0;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "IBM VGA 8x14 Web 437", "Courier New", Courier, monospace;
+  font-size: 18px;
 }
 
 p {
