--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @font-face {
   font-family: "IBM VGA 8x14 Web 437";
   src: url("assets/Web437_IBM_VGA_8x14.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
