--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 
 body {
   --main-bg-color: black;
+  --light-bg-color: beige; /* used for tooltip and notification comopnents on start screen */
   --main-text-color: #a7a7a7;
-  --lighter-text-color: #b4b4b4; /* TODO remove if unused */
   --light-text-color: #fafafa;
 
   background-color: var(--main-bg-color);
