--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ body {
 
 a {
   color: var(--light-text-color);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 @keyframes fade-out {
